--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "https://todo-d3fz.onrender.com",
   "eslintConfig": {
     "extends": [
       "react-app",
